# MemberManagement

./: Dockerfile  README.md  package.json  pyproject.toml  pytest.ini  requirements-prod.txt
.github/workflows/: docker-latest.yml  docker-prod.yml  main.yml
MemberManagement/: docker_settings.py  settings.py
MemberManagement/tests/: test_access.py
alumni/fields/: tier.py
atlas/management/commands/: geocache.py
atlas/tests/: test_01_geocache.py
custom_auth/: views.py
custom_auth/tests/: test_02_login_redirect.py
payments/: forms.py  models.py  stripewrapper.py  urls.py  views.py
payments/templates/payments/: subscribe.html
payments/templates/payments/view/: 005_methods.html
payments/tests/: test_010_subscribe.py
registry/tests/: test_000_signup_register.py
