[tool.poetry]
name = "membermanagement"
version = "0.1.0"
description = "The Django Application for managing Jacobs University Bremen Alumni Members."
authors = ["Tom Wiesing <tkw01536@gmail.com>", "Leonhard Kuboschek <leo@kuboschek.me>"]
license = "GPL3"

[tool.poetry.dependencies]
python = "^3.10"
Django = "~=5.2.4"
django-countries = "^7.5.0"
django-cookie-law = "^2.2.0"
django-impersonate = "^1.9.5"
jsonfield = "^3.2.0"
openpyxl = "^3.1.2"
raven = "^6.10.0"
stripe = "^12.4.0"
google-auth = "^2"
django-sesame = "^3.2"
pre-js-py = "^1.2.0"
google-api-python-client = "2.177.0"
beautifulsoup4 = "^4.13.4"
django-htmlmin = "^0.11.0"
requests = "^2.32.4"
tqdm = "^4.67.1"
django-webpack5-loader = "0.9.1"
django-extensions = "^4.1"
djangorestframework = "^3.16.0"
django-money = "^3"
py-moneyed = "^3.0"
django-pdf-render = "^0.1.3"
channels = "^4.3.0"
channels-redis = "^4.3.0"
whitenoise = "^6.9.0"
lxml = "^6.0.0"
pytz = "^2025.2"

[poetry.group.dev.dependencies]
pycodestyle = "2.6.0"
pytest = "6.2.5"
pytest-django = "3.9.0"
selenium = "~=4.11"
django-selenium-test = "~=2.0.0"

[tool.poetry.group.dev.dependencies]
black = {version = "^25.1.0", allow-prereleases = true}
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
