[tool.poetry]
name = "membermanagement"
version = "0.1.0"
description = "The Django Application for managing Jacobs University Bremen Alumni Members."
authors = ["Tom Wiesing <tkw01536@gmail.com>", "Leonhard Kuboschek <leo@kuboschek.me>"]
license = "GPL3"
package-mode = false


[tool.poetry.dependencies]
python = "^3.10"
Django = "~=4.2.27"
django-countries = "^8.2.0"
django-cookie-law = "^2.2.0"
django-impersonate = "^1.9.1"
jsonfield = "^3.1.0"
openpyxl = "^3.1.2"
raven = "^6.10.0"
stripe = "^14.3.0"
google-auth = "^2"
django-sesame = "^3.2"
pre-js-py = "^1.2.0"
google-api-python-client = "2.188.0"
beautifulsoup4 = "^4.12.2"
django-htmlmin = "^0.11.0"
requests = "^2.32.0"
tqdm = "^4.67.2"
django-webpack5-loader = "0.9.1"
django-extensions = "^4.1.0"
djangorestframework = "^3.14.0"
django-money = "^3"
py-moneyed = "^3.0"
django-pdf-render = "^0.1.3"
channels = "^4.3.2"
channels-redis = "^4.1.0"
whitenoise = "^6.11.0"
lxml = "^6.0.2"
pytz = "^2025.2"

[poetry.group.dev.dependencies]
pycodestyle = "2.6.0"
pytest = "6.2.5"
pytest-django = "3.9.0"
selenium = "~=4.11"
django-selenium-test = "~=2.0.0"

[tool.poetry.group.dev.dependencies]
black = {version = "^26.1.0", allow-prereleases = true}
pre-commit = "^4.5.1"
seleniumbase = "^4.41.1"
django-selenium-test = "^2.0.0"
pytest-django = "^4.11.1"
pytest-env = "^1.1.5"

[tool.pytest.ini_options]
norecursedirs = "node_modules"
filterwarnings = """
    error
    ignore::pytest.PytestUnraisableExceptionWarning
    ignore::DeprecationWarning:selenium.webdriver.firefox.*
    ignore::DeprecationWarning:django_countries.fields:5
    ignore::DeprecationWarning:pkg_resources:2871
"""
env = "DJANGO_SETTINGS_MODULE=MemberManagement.test_settings"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
